# fleema

./: .flake8  .gitignore  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/workflows/: python-package.yml
advantage/: __main__.py  charger.py  location.py  spiceev_interface.py  trip.py  vehicle.py
docs/: docs_requirements.txt
docs/_build/doctrees/: advantage.doctree  advantage.util.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  advantage.html  advantage.util.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: advantage.rst  advantage.util.rst  code.rst  conf.py  getting_started.rst  index.rst  modules.rst  simulating.rst
scenario_data/airport_base/: charging_points.json  profile.csv  schedule.csv
scenario_data/bad_birnbach/: charging_points.json  consumption.csv  consumption_ez10.csv  cost.csv  emission.csv  incline.csv  pv.csv  schedule.csv  temperature.csv  vehicle_types.json
scenario_data/bad_birnbach/configs/: base_scenario.cfg
scenario_data/logistics_base/: charging_points.json  scenario.cfg
scenario_setting/base_scenario/: scenario.cfg
scenario_settings/bad_birnbach/: scenario.cfg
scenarios/: __init__.py
scenarios/airport/: charging_points.json  vehicle_types_airport.json
scenarios/airport_base/: profile.csv  scenario.cfg  vehicle_types.json
scenarios/configs/: scenario.cfg
scenarios/data/: charging_points.json  trips_example.csv  vehicle_types.json
scenarios/default/: charging_points.json  scenario.cfg  schedule.csv  vehicle_types.json
scenarios/logistics/: charging_points.json  vehicle_types_logistics.json
scenarios/logistics_base/: scenario.cfg  schedule.csv  vehicle_types.json
scenarios/public_transport_base/: charging_points.json  consumption.csv  consumption_ez10.csv  distance.csv  incline.csv  pv.csv  scenario.cfg  schedule.csv  vehicle_types.json
src/: simulation.py
src/advantage/: __main__.py  charger.py  event.py  location.py  plot.py  ride.py  simulation.py  simulation_state.py  simulation_type.py  spiceev_interface.py  vehicle.py
src/advantage/simulation_types/: ondemand.py  schedule.py
src/advantage/util/: conversions.py  enums.py  helpers.py
src/fleema/: __main__.py  charger.py  event.py  location.py  plot.py  ride.py  simulation.py  simulation_state.py  simulation_type.py  spiceev_interface.py  vehicle.py
src/fleema/simulation_types/: ondemand.py  schedule.py
src/fleema/util/: helpers.py
src/module/: __main__.py  location.py  simulation.py  vehicle.py
src/scenario_wrapper/: profile.csv  tool.py
tests/: test_charger.py  test_classes.py  test_location.py  test_ride.py  test_simulation.py  test_simulation_state.py  test_something.py  test_spiceev_interface.py  test_vehicle.py
