[metadata]
name = TBD
version = 0.0.0-alpha
license = GNU
description = Autonomous fleet and energy management tool
long_description = file: README.rst
author = Mosc5
author_email = <Optional: author e-mail>
classifiers=
   Development Status :: 3 - Alpha
   Intended Audience :: Developers
   Intended Audience :: Science/Research
   License :: OSI Approved :: GNU Affero General Public License v3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   pandas

[options.packages.find]
where=src

[flake8]
exclude = docs/
max-line-length=100