[metadata]
name = TBD
version = 0.0.0-alpha
license = GNU
description = Autonomous fleet and energy management tool
long_description = file: README.rst
author = mosc5
author_email = <Optional: author e-mail>
classifiers=
   Development Status :: 3 - Alpha
   Intended Audience :: Developers
   Intended Audience :: Science/Research
   License :: OSI Approved :: GNU Affero General Public License v3
   Programming Language :: Python
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.7
install_requires =
    tox >=3.12, <4

[options.packages.find]
where=src

[options.extras_require]
testing =
    coverage <6
    flake8 >=3, <4
    pytest >=4, <7; python_version<'3.10'
    pytest >=6.2.5, <7; python_version>='3.10'
    pytest-cov >=2, <3
    pytest-mock >=2, <3
    pytest-randomly >=3; python_version>='3.5'

[tox:tox]
minversion = 3.7
isolated_build = true
skip_missing_interpreters = true
envlist =
    flake8
    py38, py310

[gh-actions]
python =
    3.8: py38, flake8
    3.10: py310

[testenv]
description = run test suite under {basepython}
deps =
    tox312: tox>=3.12,<3.13
    tox315: tox>=3.15,<3.16
extras = testing
commands = pytest --cov=tox_gh_actions --cov-branch --cov-report=term --cov-report=xml {posargs}

[testenv:flake8]
description = run flake8 under {basepython}
commands = flake8 src/ tests/ setup.py
extras = testing

[flake8]
max-line-length = 120
exclude = /docs
max-complexity = 10