[metadata]
name = advantage
version = 0.0.0-alpha
license = GNU
description = Autonomous fleet and energy management tool
long_description = file: README.rst
author = mosc5
author_email = <Optional: author e-mail>
classifiers=
   Development Status :: 3 - Alpha
   Intended Audience :: Developers
   Intended Audience :: Science/Research
   License :: OSI Approved :: GNU Affero General Public License v3
   Programming Language :: Python
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.8

[options]
packages = advantage
package_dir =
    =src
include_package_data = True
python_requires = >=3.8
install_requires =
    pandas >= 1.4.0
    spice_ev @ https://github.com/rl-institut/spice_ev/zipball/dev

[options.extras_require]
dev =
    flake8 >= 3.9
    pytest >= 6
    pytest-cov >=2, <3
    mypy >= 0.910
    tox >= 3.12
    black

[tox:tox]
minversion = 3.8
isolated_build = true
skip_missing_interpreters = true
envlist =
    flake8, mypy, py38, py39, py310

[gh-actions]
python =
    3.8: py38, flake8, mypy
    3.9: py39
    3.10: py310

[testenv]
description = run test suite under {basepython}
whitelist_externals = pytest
deps =
    -r{toxinidir}/dev_requirements.txt
extras = testing
commands = pytest --basetemp={envtmpdir}

[testenv:flake8]
description = run flake8 under {basepython}
whitelist_externals = flake8
commands = flake8 src tests setup.py --extend-exclude=spice-ev
extras = testing

[testenv:mypy]
description = run mypy under {basepython}
whitelist_externals = mypy
commands = mypy src tests setup.py
extras = testing

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude = /docs
max-complexity = 10